components/nonmem-parser/src/snapshots/nonmem_parser__parser__tests__parse_errors@omega_same_with_values.mod.snap
---
source: components/nonmem-parser/src/parser.rs
expression: "rendered.join(\"\\n\")"
input_file: components/nonmem-parser/test_data/errors/omega_same_with_values.mod
---
error: SAME block cannot contain parameter values
 --> omega_same_with_values.mod:2:22
  |
2 | $OMEGA BLOCK(2) SAME 0.1
  |                      ^^^
